mdd-backend/src/main/java/com/example/mdd_backend/errors/exceptions/ResourceNotFoundException.java
package com.example.mdd_backend.errors.exceptions;

public class ResourceNotFoundException extends RuntimeException {
  public ResourceNotFoundException(String message) {
    super(message);
  }
}
